--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first projects</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100&family=Dancing+Script:wght@600&family=Inter:wght@100&family=Lemonada:wght@400;600&family=Potta+One&family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>This is hasan</h1>
+    <h1>This is Hasan</h1>
 </body>
 </html>
