--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>first projects</title>
+    <title>Hasan Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100&family=Dancing+Script:wght@600&family=Inter:wght@100&family=Lemonada:wght@400;600&family=Potta+One&family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Jomhuria&family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>This is Hasan</h1>
+    <section>
+    <h1>Welcome To</h1>
+    <h1><span class="name-highlight">Hasan</span> Website</h1>
+    <h3>World class Web developer</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</br> Error corrupti sed inventore reiciendis excepturi vitae.</p>
+    <button>Hire Me</button>
+    </section>
 </body>
 </html>
