--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 <link href="https://fonts.googleapis.com/css2?family=Jomhuria&family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section>
-    <h1>Welcome To</h1>
+    <section class="top-banner">
+    <div class="half-width">
+        <h1>Welcome To</h1>
     <h1><span class="name-highlight">Hasan</span> Website</h1>
     <h3>World class Web developer</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</br> Error corrupti sed inventore reiciendis excepturi vitae.</p>
     <button>Hire Me</button>
+    </div>
+    <div class="half-width">
+        <img src="./images/profile.jpg" alt="">
+    </div>
     </section>
 </body>
 </html>
