--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <h1>Welcome To</h1>
     <h1><span class="name-highlight">Hasan</span> Website</h1>
     <h3>World class Web developer</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</br> Error corrupti sed inventore reiciendis excepturi vitae.</p>
-    <button>Hire Me</button>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</br> Error corrupti sed inventore reiciendis excepturi vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <a class="link-button" target="_blank" href="https://www.facebook.com/?sk=h_chr">Hire me</a>
     </div>
     <div class="half-width">
-        <img src="./images/profile.jpg" alt="">
+        <img src="./images/newprofile.png" alt="">
     </div>
     </section>
 </body>
