--- a/index.html
+++ b/index.html
@@ -21,5 +21,16 @@
         <img src="./images/newprofile.png" alt="">
     </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="./images/image 17.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become a world class web developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae corporis saepe fugiat magnam deserunt dicta praesentium consequatur nostrum nihil delectus?</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/">My linkedIn</a>
+        </div>
+    </section>
 </body>
 </html>
