--- a/index.html
+++ b/index.html
@@ -32,5 +32,18 @@
             <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/">My linkedIn</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h2>Experience</h2>
+        <div class="half-width">
+            <h2>Full Stack Web developer</h2>
+            <h3>2021-present | Programming Hero Learner</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis cupiditate error amet dicta rerum corporis sequi possimus voluptate non sit?</p>
+        </div>
+        <div class="half-width">
+            <h2>Full Stack Web developer</h2>
+            <h3>2021-present | Programming Hero Learner</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse in sunt veniam numquam repellat alias suscipit dicta expedita explicabo sequi.</p>
+        </div>
+    </section>
 </body>
 </html>
